--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <div class="flex bg-arancione">
+            <div class="flex">
                 <div class="flex menu logo">
-                    <p>LOGO</p>
+                    <p><img src="./img/logo.svg" alt=""></p>
                 </div>
                 <div class="flex menu lista">
                     <ul>
-                        <li>link</li>
-                        <li>link</li>
-                        <li>link</li>
-                        <li>link</li>
+                        <li><a href="Scarica">Scarica</a></li>
+                        <li><a href="Perchè Discord">Perchè Discord</a></li>
+                        <li><a href="Nitro">Nitro</a></li>
+                        <li><a href="Sicurezza">Sicurezza</a></li>
+                        <li><a href="Assistenza">Assistenza</a></li>
                     </ul>
                 </div>
                 <div class="flex menu login">
-                    Login
+                    <p class="btn"> Accedi</p>
                 </div>
             </div>
         </div>
@@ -34,10 +35,9 @@
     </header>
     <!-- Fine Header -->
 
-    <hr>
 
     <!-- Banner -->
-    <section class="banner bg-blue flex">
+    <section class="banner bg-blue flex bg-header">
         <div class="banner-content height"></div>
     </section>
     <!-- Fine Banner -->
