--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -19,15 +21,15 @@
                 </div>
                 <div class="flex menu lista">
                     <ul>
-                        <li><a href="Scarica">Scarica</a></li>
-                        <li><a href="Perchè Discord">Perchè Discord</a></li>
-                        <li><a href="Nitro">Nitro</a></li>
-                        <li><a href="Sicurezza">Sicurezza</a></li>
-                        <li><a href="Assistenza">Assistenza</a></li>
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perchè Discord</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Assistenza</a></li>
                     </ul>
                 </div>
                 <div class="flex menu login">
-                    <p class="btn"> Accedi</p>
+                    <p class="btn-chiaro"> Accedi</p>
                 </div>
             </div>
         </div>
@@ -37,8 +39,15 @@
 
 
     <!-- Banner -->
-    <section class="banner bg-blue flex bg-header">
-        <div class="banner-content height"></div>
+    <section class="banner flex bg-header">
+        <div class="banner-content height">
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, <br> o
+                semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, <br> Discord rende più
+                facile chiaccherare ogni giorno e ritrovarsi più spesso</p>
+            <a class="btn-chiaro" href="#">Scarica per il mac</a>
+            <a class="btn-scuro" href="#">Apri Discord nel tuo browser</a>
+        </div>
     </section>
     <!-- Fine Banner -->
 
@@ -49,7 +58,7 @@
         <section class="padding">
             <div class="container flex">
                 <div class="col-60 height bg-blue ">
-                    
+
                 </div>
                 <div class="col-40 height bg-pink"></div>
             </div>
