--- a/index.html
+++ b/index.html
@@ -57,32 +57,54 @@
     <main>
         <section class="padding">
             <div class="container flex">
-                <div class="col-60 height bg-blue ">
-
+                <div class="col-60">
+                    <img src="./img/item1.svg" alt="Item1">
                 </div>
-                <div class="col-40 height bg-pink"></div>
+                <div class="col-40">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                        semplicemente parlare della tua giornata senza inpasare una chat di gruppo.
+                    </p>
+                </div>
             </div>
         </section>
         <section class="padding bg-grey">
             <div class="container flex flex-reverse">
-                <div class="col-60 height bg-blue "></div>
-                <div class="col-40 height bg-pink"></div>
+                <div class="col-60">
+                    <img src="./img/item2.svg" alt="Item2">
+                </div>
+                <div class="col-40-2">
+                    <h2>Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un cancale vocale quando hai tempo. gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente seza dover chiamare</p>
+                </div>
             </div>
         </section>
         <section class="padding">
             <div class="container flex">
-                <div class="col-60 height bg-blue "></div>
-                <div class="col-40 height bg-pink"></div>
+                <div class="col-60">
+                    <img src="img/item3.svg" alt="Item3">
+                </div>
+                <div class="col-40">
+                    <h2>Da pochi a un fandom</h2>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. <br>
+                    Concedi ai membri poteri spewciali, crea canali privati, e molto altro.</p>
+                </div>
             </div>
         </section>
         <section class="padding bg-grey">
             <div class="container">
-                <div class="col-100 bg-green"></div>
+                <div class="col-100">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e auidio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda fli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="img/item4-big.svg" alt="Item4">
+                </div>
             </div>
         </section class="padding bg.black">
         <section class="padding-bottom-20 bg-black">
             <div class="container flex">
-                <div class="col-40 height bg-salmon"></div>
+                <div class="col-40 height bg-salmon">
+                    <p><h2>Il tuo spazio per parlare</h2></p>
+                </div>
                 <div class="col-15 height bg-lightblue dotted-white"></div>
                 <div class="col-15 height bg-lightblue dotted-white"></div>
                 <div class="col-15 height bg-lightblue dotted-white"></div>
