--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 </div>
                 <div class="col-40-2">
                     <h2>Dove trovarsi è facile</h2>
-                    <p>Mettiti comodo in un cancale vocale quando hai tempo. gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente seza dover chiamare</p>
+                    <p>Mettiti comodo in un cancale vocale quando hai tempo. gli amici nel tuo server possono vedere che
+                        sei li e unirsi istantaneamente seza dover chiamare</p>
                 </div>
             </div>
         </section>
@@ -86,8 +87,9 @@
                 </div>
                 <div class="col-40">
                     <h2>Da pochi a un fandom</h2>
-                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. <br>
-                    Concedi ai membri poteri spewciali, crea canali privati, e molto altro.</p>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai
+                        membri personalizzabile. <br>
+                        Concedi ai membri poteri spewciali, crea canali privati, e molto altro.</p>
                 </div>
             </div>
         </section>
@@ -95,31 +97,83 @@
             <div class="container">
                 <div class="col-100">
                     <h2>Tecnologia affidabile per tenersi in contatto</h2>
-                    <p>Video e auidio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda fli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <p>Video e auidio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai
+                        ciao in video, guarda fli amici giocare in streaming, o riunitevi in una sessione di disegno con
+                        la condivisione schermo.</p>
                     <img src="img/item4-big.svg" alt="Item4">
                 </div>
             </div>
-        </section class="padding bg.black">
-        <section class="padding-bottom-20 bg-black">
-            <div class="container flex">
-                <div class="col-40 height bg-salmon">
-                    <p><h2>Il tuo spazio per parlare</h2></p>
-                </div>
-                <div class="col-15 height bg-lightblue dotted-white"></div>
-                <div class="col-15 height bg-lightblue dotted-white"></div>
-                <div class="col-15 height bg-lightblue dotted-white"></div>
-                <div class="col-15 height bg-lightblue dotted-white"></div>
-            </div>
         </section>
+
     </main>
     <!-- Fine Main -->
     <hr>
     <!-- Footer -->
     <footer class="bg-black padding-top-10">
+        <section class="padding-bottom-20 bg-black">
+            <div class="container flex">
+                <div class="col-40-footer bg-black dotted-white">
+                    <h3>Il tuo spazio per parlare</h3>
+                    <img src="img/ita.png" alt="italia">
+                    <p style="display: flex;">Italiano</p>
+                    <p>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </p>
+                </div>
+                <div class="col-15 dotted-white">
+                    <ul>
+                        <li class="list-header">Prodotto</li>
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perchè Discord</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="col-15 dotted-white">
+                    <ul>
+                        <li class="list-header">Compagnia</li>
+                        <li><a href="#">Chi siamo</a></li>
+                        <li><a href="#">Lavora con noi</a></li>
+                        <li><a href="#">Marchio</a></li>
+                        <li><a href="#">Redazione</a></li>
+                        <li><a href="#">Negozio</a></li>
+                    </ul>
+                </div>
+                <div class="col-15 dotted-white">
+                    <ul>
+                        <li class="list-header">Risorse</li>
+                        <li><a href="#">Chi siamo</a></li>
+                        <li><a href="#">Lavora con noi</a></li>
+                        <li><a href="#">Marchio</a></li>
+                        <li><a href="#">Redazione</a></li>
+                        <li><a href="#">Negozio</a></li>
+                        <li><a href="#">Chi siamo</a></li>
+                        <li><a href="#">Lavora con noi</a></li>
+                        <li><a href="#">Marchio</a></li>
+                        <li><a href="#">Redazione</a></li>
+                        <li><a href="#">Negozio</a></li>
+                    </ul>
+                </div>
+                <div class="col-15 dotted-white">
+                    <ul>
+                        <li class="list-header">Risorse</li>
+                        <li><a href="#">Chi siamo</a></li>
+                        <li><a href="#">Lavora con noi</a></li>
+                        <li><a href="#">Marchio</a></li>
+                        <li><a href="#">Redazione</a></li>
+                        <li><a href="#">Negozio</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         <div class="container">
             <div class="footer flex bg-lightblue">
-                <button>Logo</button>
-                <button>Bottone</button>
+                <img src="./img/logo.svg" alt="Logo">
+                <button class="btn-chiaro">Registrati</button>
             </div>
         </div>
     </footer>
