--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
                         ciao in video, guarda fli amici giocare in streaming, o riunitevi in una sessione di disegno con
                         la condivisione schermo.</p>
                     <img src="img/item4-big.svg" alt="Item4">
+                    <h3>Pronto per iniziare la tua avventura?</h3>
+                    <a href="#" class="btn-color">&DownArrow; Scarica per mac</a>
                 </div>
             </div>
         </section>
@@ -114,14 +116,18 @@
             <div class="container flex">
                 <div class="col-40-footer bg-black dotted-white">
                     <h3>Il tuo spazio per parlare</h3>
-                    <img src="img/ita.png" alt="italia">
-                    <p style="display: flex;">Italiano</p>
-                    <p>
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-square-facebook"></i>
-                        <i class="fa-brands fa-youtube"></i>
-                    </p>
+                    <div class="italia">
+                        <img src="img/ita.png" alt="italia">
+                        <p>Italiano</p>
+                    </div>
+                    <div class="social">
+                        <p>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                        </p>
+                    </div>
                 </div>
                 <div class="col-15 dotted-white">
                     <ul>
@@ -171,9 +177,9 @@
             </div>
         </section>
         <div class="container">
-            <div class="footer flex bg-lightblue">
+            <div class="footer flex bg-black">
                 <img src="./img/logo.svg" alt="Logo">
-                <button class="btn-chiaro">Registrati</button>
+                <button class="btn-color">Registrati</button>
             </div>
         </div>
     </footer>
